--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,4 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 urllib3==1.25.8
+sphinx-rtd-theme==0.4.3
